--- a/app/views/players/index.html.erb
+++ b/app/views/players/index.html.erb
@@ -8,13 +8,30 @@
   </head>
   <body>
     <nav>
-    <div class="nav-wrapper">
-      <a href="#" class="brand-logo right">NFL WANTED</a>
+    <div class="nav-wrapper black">
+      <a href="#" class="brand-logo right black">NFL WANTED</a>
       <ul id="nav-mobile" class="left hide-on-med-and-down">
-        <li><a href="sass.html">Teams</a></li>
-        <li><a href="badges.html">Players</a></li>
-        <li><a href="collapsible.html">MugShots</a></li>
+        <li><a href="#">Teams</a></li>
+        <li><a href="#">Players</a></li>
+        <li><a href="#">MugShots</a></li>
       </ul>
     </div>
   </nav>
+
+  <div class="cuffslogo">
+    <%= image_tag("nflcuffs.jpg", :size => "400x300") %>
+  </div>
+
+  <h5>Find out if your favorite player has had any run ins with the law!</h5>
+
+  <div class="nav-wrapper">
+    <form>
+      <div class="input-field">
+        <input id="search" type="search" required>
+        <label for="search"><i class="material-icons">search</i></label>
+        <i class="material-icons">close</i>
+      </div>
+    </form>
+  </div>
+
 </html>
