added google fonts

--- a/app/views/players/index.html.erb
+++ b/app/views/players/index.html.erb
@@ -9,12 +9,7 @@
   <body>
     <nav>
     <div class="nav-wrapper black">
-      <a href="#" class="brand-logo right black">NFL WANTED</a>
-      <ul id="nav-mobile" class="left hide-on-med-and-down">
-        <li><a href="#">Teams</a></li>
-        <li><a href="#">Players</a></li>
-        <li><a href="#">MugShots</a></li>
-      </ul>
+      <a href="#" class="brand-logo center black">NFL'S MOST WANTED</a>
     </div>
   </nav>
 
