fixed search bar

--- a/app/views/players/index.html.erb
+++ b/app/views/players/index.html.erb
@@ -17,7 +17,7 @@
     <%= image_tag("nflcuffs.jpg", :size => "400x300") %>
   </div>
 
-  <h5>Find out if your favorite player has had any run ins with the law!</h5>
+  <h5>Find out if your favorite player has had any run in's with the law!</h5>
 
   <div class="nav-wrapper">
     <form>
