--- a/app/views/players/index.html.erb
+++ b/app/views/players/index.html.erb
@@ -17,16 +17,11 @@
     <%= image_tag("nflcuffs.jpg", :size => "400x300") %>
   </div>
 
-  <h5>Find out if your favorite player has had any run in's with the law!</h5>
-
-  <div class="nav-wrapper">
-    <form>
-      <div class="input-field">
-        <input id="search" type="search" required>
-        <label for="search"><i class="material-icons">search</i></label>
-        <i class="material-icons">close</i>
-      </div>
-    </form>
+ <div id="player_names">
+    <% @data.each do |p| %>
+      <p>
+      <a href="/players/<%= p["Name"] %>"><%= p["Name"] %></a>
+      </p>
+    <% end %>
   </div>
-
 </html>
